# kpi-indicadores2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  artex_login_codes.py  deploy.sh  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: Makefile  index.rst  make.bat
notebooks/: abc.ipynb  base_nova.ipynb  bq.ipynb  discovery_instagram_api.ipynb  discovery_instagram_posts.ipynb  discovery_posts_comments.ipynb  kpi_fluxo_antigo.ipynb  kpi_fluxo_envio_homologacao.ipynb  kpi_fluxo_errado.ipynb  kpi_fluxo_novo.ipynb  model_posts_response.json  model_users_respose.json  openai_instructions.ipynb  query_vendas.py  teste_base_kpi.ipynb  testes.ipynb  testes_e_treino.ipynb  testes_e_treino_insta.ipynb  tl-email-pdf-generato_refactor.ipynb  tl-open_ai_instruction.ipynb  whatsapp_requests.ipynb
notebooks/comments_responses/: artex_1_DA01frsRgYF_comments.json  artex_1_DAYZgPIueRw_comments.json  artex_1_DAdqG_upL-m_comments.json  artex_1_DAmG4ZLPdkq_comments.json  artex_1_DAtLb41xGBM_comments.json  artex_1_DAyyyJCvSQW_comments.json  artex_1_DBNGTK5PTZK_comments.json  artex_1_DBPi75WA7cx_comments.json  artex_2_DA01frsRgYF_comments.json  artex_2_DAYZgPIueRw_comments.json  artex_2_DAmG4ZLPdkq_comments.json  artex_2_DAtLb41xGBM_comments.json  artex_2_DAyyyJCvSQW_comments.json  artex_3_DAYZgPIueRw_comments.json  artex_3_DAmG4ZLPdkq_comments.json  artex_4_DAYZgPIueRw_comments.json  artex_4_DAmG4ZLPdkq_comments.json  artex_5_DAYZgPIueRw_comments.json  (+2 more)
tests/: test_api.py
(+91 files in other folders)
