[tool.poetry]
name = "innovation_api"
version = "0.1.0"
description = ""
authors = ["JoaoGarcia <joao.garcia@ammovarejo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.25.0"
pandas = "^2.2.2"
db-dtypes = "^1.3.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
fpdf2 = "2.7.9"
unidecode = "^1.3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ipykernel = "^6.29.5"
httpx = "^0.27.0"
pytest = "^8.3.2"
pylint = "^3.2.6"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "uvicorn src.innovation_api.api.main:fast_api --port 8080 --host 0.0.0.0 --reload"
